crates/toml_edit/tests/snapshots/invalid/key/without-value-05.stderr
TOML parse error at line 1, column 6
  |
1 | fs.fw
  |      ^
key with no value, expected `=`
